--- a/Sketch_variable/css/style.css
+++ b/Sketch_variable/css/style.css
@@ -40,3 +40,30 @@ canvas{
     display: block;
     font-family: monospace;
 }
+
+.slidecontainer {
+    width: 100%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    background: white;
+    outline: none;
+    -webkit-transition: .2s;
+    opacity: 0.8;
+    transition: .2s;
+}
+
+.slider:hover {
+    pacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: white;
+}
