--- a/scrubVideo/style.css
+++ b/scrubVideo/style.css
@@ -47,10 +47,10 @@ html, body {
       text-align: center;
       padding: 30% 0;
   
-      color: white;
+      color: black;
       margin: 0;
       
 
-      font-variation-settings: 'SIZE' 1;
+      font-variation-settings: 'SIZE' 300;
       /*font-variation-settings: 'wght' 100;*/
     }
