--- a/Sketch_variable/abc/A_slider_DV/style.css
+++ b/Sketch_variable/abc/A_slider_DV/style.css
@@ -23,24 +23,26 @@
             top: -500px;
             right: 0;
             bottom: 0; */
-            width: 80vw;
+            width: 100vw;
             height:80vh;
-
-            font-family: ‘Font’;
             text-align: center;
-            padding: 10% 0;
-        
-            color: black;
             margin: 10;
+            z-index: -1;
+            color: black;
+            padding: 10% 0;
             
+        }
+        
+        #text p{
+            font-family: ‘Font’;
             font-variation-settings: 'SIZE' 300;
             /*letter-spacing: -1px;*/
             font-kerning: normal;
-            z-index: -1;
+
         }
 
         .slidecontainer {
-            width: 102vw;
+            width: 100vw;
             background-color: white;
             z-index: 1;
             border: 1px solid #C0C0C0;
