--- a/E_motion/assets/css/style.css
+++ b/E_motion/assets/css/style.css
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-  background-color: none;
   margin: 0;
+  padding:0;
   background-color: white;
   color: black;
 }
@@ -25,48 +25,26 @@ div {
   font-family: 'E_motion';
   src: url('E_motionGX.ttf') format('truetype-variations');
   font-stretch: 75% 100%;
-  font-SAJO: -100 100;
-  font-SAJO: -100 100;
-  font-DITR: -100 100;
-  font-ANFE: -100 100;
-  font-ANSU: -100 100;
+  font-style: oblique 0deg 12deg;
+  font-weight: 100 900;
 }
 
 :root {
   --text-SAJO: 0;
-  --text-SAJO1: 0;
   --text-DITR: 0;
-  --text-DITR1: 0;
   --text-ANFE: 0;
   --text-ANSU: 0;
-  --text-ANSU1: 0;
 }
 
-/*#text {
-      position: absolute;
-      text-align: center;
-      width: 100vw;
-      height:80vh;
-
-      font-family: "E_motion", sans-serif;
-      padding: 10% 0;
-    
-      color: black;
-      font-kerning: normal;
-      z-index: -1;
-    }
-*/
 .buttonVariable {
   position: absolute;
-  bottom: 7.5rem;
+  bottom: 8rem;
   right: 1rem;
-  background-color: white;
-  color: black;
 }
 
 .btn {
   font-family: "E_motion", sans-serif;
-  border: 1px solid black;
+  border: 0.2px solid rgb(0,0,0,0.5);
   outline: none;
   padding: .35rem .35rem .45rem .35rem;
   /*padding: .35rem .35rem .45rem .35rem;*/
@@ -76,8 +54,10 @@ div {
   opacity: 1;
   text-align: center;
   text-decoration:none;
-  width: 5.8rem;
+  width: 6rem;
+  height: 2rem;
   margin-top: 1rem;
+  border-radius: 4px;
   display: block;
   background-color: white;
   color: black;
@@ -96,48 +76,26 @@ div {
   color: black;
 }
 
-.container-text {
+.container-specimen {
   font-family: "E_motion", sans-serif;
-  width: 100%;
+  display: grid;
+  margin-right: 1rem;
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding-top: 1rem;
+}
+
+/*.container-text {
+  font-family: "E_motion", sans-serif;
   display: grid;
   grid-template-columns: 9fr 3fr;
   background-color: white;
   color: black;
-}
-
-.container-specimen {
-  font-family: "E_motion", sans-serif;
-  width: 100%;
-  display: grid;
-  /*grid-template-columns: 12fr;*/
-  grid-gap: 0px;
-  padding: 0rem 1rem 0rem 0rem;
-  background-color: white;
-  color: black;
-}
-
-.container-thanks {
-  font-family: "E_motion", sans-serif;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 0px;
-  padding: 0rem 0rem 0rem 0rem;
-  background-color: white;
-  color: black;
-}
+}*/
 
 .demo-text {
   font-family: "E_motion", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50vh;
-  border: none;
-  outline: none;
-  line-height: 1.1em;
-  user-select: none;
-  width: 97vw;
 
   /*font-size: "font-size";*/
   font-size: 10rem;
@@ -149,152 +107,63 @@ div {
 
   background-color: white;
   color: black;
+
+  z-index:-1;
 }
 
-.About-text {
+.about-text {
   font-family: "E_motion", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position:absolute;
+  border: none;
+  outline: none;
+  user-select: none;
+
+  /*font-size: "font-size";*/
+  font-size: 2rem;
+  font-SAJO: var(--text-SAJO);
+  font-ANFE: var(--text-ANFE);
+  font-DITR: var(--text-DITR);
+  font-ANSU: var(--text-ANSU);
   font-variation-settings: "SAJO" 0, "DITR" 0, "ANFE" 0, "ANSU" 0;
+  
   padding: 0;
-  margin-top: 8rem;
+  margin-top: 1rem;
   margin-left: 1rem;
   text-align: left;
-  font-size: 2vw;
   background-color: white;
   color: black;
+
+  z-index:-1;
 }
 
-.Text-Neutral {
+.Text {
   font-family: "E_motion", sans-serif;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
+  margin-top: 0rem;
   margin-left: 1rem;
-  margin-right: 0rem;
+  padding-left: 1.5rem;
+  margin-right: 1rem;;
+  padding-right: 1.5rem;;
+  padding-bottom: 1.5rem;;
   text-align: center;
   font-size: 2rem;
   background-color: white;
   color: black;
-}
-
-.Text-Joy {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" 100, "DITR" 0, "ANFE" 0, "ANSU" 0;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
   text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-}
+  border: 0.2px solid rgb(0,0,0,0.5);
+  border-radius: 20px;
+  padding-top: 1rem;
 
-.Text-Sadness {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" -100, "DITR" 0, "ANFE" 0, "ANSU" 0;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-}
-
-.Text-Trust {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" 0, "DITR" 100, "ANFE" 0, "ANSU" 0;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-}
-
-.Text-Disgust {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" 0, "DITR" -100, "ANFE" 0, "ANSU" 0;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-}
-
-.Text-Fear {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" 0, "DITR" 0, "ANFE" 100, "ANSU" 0;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-}
-
-.Text-Anger {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" 0, "DITR" 0, "ANFE" -100, "ANSU" 0;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-}
-
-.Text-Anticipation {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" 0, "DITR" 0, "ANFE" 0, "ANSU" -100;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 2rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
-}
-
-.Text-Surprise {
-  font-family: "E_motion", sans-serif;
-  font-variation-settings: "SAJO" 0, "DITR" 0, "ANFE" 0, "ANSU" 100;
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  color: black;
+  /*border: none;*/
+  outline: none;
 }
 
 .Style {
   font-family: "E_motion", sans-serif;
   margin-top: 0;
-  padding-top: 3rem;
   text-align: center;
-  font-size: 1rem;
-  background-color: white;
-  color: black;
-}
-
-.Style-Neutral {
-  font-family: "E_motion", sans-serif;
-  margin-top: 0;
-  padding-top: 6rem;
-  text-align: center;
-  font-size: 1rem;
   background-color: white;
   color: black;
 }
@@ -314,49 +183,58 @@ div {
 }
 
 .output {
+  font-size: 0.95em;
   font-style: normal;
-  font-variation-settings: "FEAN" var(--text-FEAN);
   font-weight: 400;
 }
 
-.slidercontainer {
+.slider-container {
   position: absolute;
-  bottom: 20px;
+  bottom: 1.5rem;
   width: 100%;
   display: grid;
   grid-template-columns: 3fr 3fr 3fr 3fr;
-  grid-gap: 1px;
   padding: 0rem 0rem 0rem 1.5rem;
   background-color: white;
   /*color: black;*/
 } 
 
 .slider-controls {
+  font-family: "E_motion", sans-serif;
   grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   background-color: white;
   /*color: black;*/
 }
 
-.slider-label-right {
-  font-size: 1rem;
+.slider-label {
+  font-size: 0.95em;
   margin-right: 2.25vw;
   color: black;
   text-align: right;
   font-style: normal;
-  font-variation-settings: "FEAN" var(--text-FEAN);
+  font-weight: 650;
+  background-color: white;
+  color: black;
+}
+
+.slider-label-right {
+  font-size: 0.95em;
+  margin-right: 2.25vw;
+  color: black;
+  text-align: right;
+  font-style: normal;
   font-weight: 650;
   background-color: white;
   color: black;
 }
 
 .slider-label-left {
-  font-size: 1rem;
+  font-size: 0.95em;
   text-align: left;
   font-style: normal;
-  font-variation-settings: "FEAN" var(--text-FEAN);
   font-weight: 650;
   background-color: white;
   color: black;
@@ -365,7 +243,7 @@ div {
 .slider {
   -webkit-appearance: none;
   width: 90%;
-  height: 1px;
+  height: 0.2px;
   opacity: 1;
   border-radius: .25rem;
   -webkit-transition: .2s;
@@ -380,14 +258,14 @@ div {
   appearance: none;
   width: 10px;
   height: 10px;
-  border-radius: 50%;
-  background-color: black;
+  border-radius: 100%;
+  background-color: rgba(0,0,0,1);
 }
 
 .slider::-moz-range-thumb {
-  width: 1.75rem;
-  height: 1.75rem;
-  border-radius: 50%;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 100%;
   background-color: black;
 }
 
@@ -400,68 +278,76 @@ div {
 }
 
 .topnav {
+  overflow: hidden;
+  background-color: white;
+  padding: 1rem .25rem .35rem .25rem;
   font-family: "E_motion", sans-serif;
   margin-left: 1rem;
-  margin-top: 0;
-  cursor: pointer;
-  font-size: 1rem;
-  opacity: 1;
-  padding: 1rem .25rem .35rem .25rem;
-  text-align: center;
-  outline: none;
-  text-decoration:none;
-  background-color: white;
-  color: black;
+  font-size: 0.95rem;
 }
 
-.attached {
+.nav {
+  overflow: hidden;
+  background-color: white;
+  padding: 1rem .25rem .35rem .25rem;
   font-family: "E_motion", sans-serif;
-  position:absolute;
   margin-left: 1rem;
-  margin-top: 3.5rem;
-  cursor: pointer;
-  font-size: 1rem;
-  opacity: 1;
-  padding: .25rem .25rem .35rem .25rem;
-  text-align: center;
-  outline: none;
-  text-decoration:none;
-  /*background-color: white;*/
-  color: black;
+  font-size: 0.95rem;
 }
 
 .language {
-  font-family: "E_motion", sans-serif;
-  position:absolute;
-  margin-left: 1rem;
-  margin-top: 3.5rem;
-  cursor: pointer;
-  font-size: 1rem;
-  opacity: 1;
-  padding: .25rem .25rem .35rem .25rem;
-  text-align: center;
-  outline: none;
-  text-decoration:none;
+  overflow: hidden;
   background-color: white;
-  color: black;
+  padding: 1rem .25rem .35rem .25rem;
+  font-family: "E_motion", sans-serif;
+  margin-left: 1rem;
+  font-size: 0.95rem;
 }
 
 .topnav a {
-  float: left;
-  color: black;
   font-family: "E_motion", sans-serif;
-  border: 1px solid black;
-  margin-right: 1rem;
-  cursor: pointer;
-  font-size: 1rem;
-  opacity: 1;
-  padding: .35rem .35rem .45rem .35rem;
-  text-align: center;
-  outline: none;
-  text-decoration:none;
-  width: 5.8rem;
-  background-color: white;
+  float: left;
+  display: block;
   color: black;
+  text-align: center;
+  /*padding: 1em 1em;*/
+  text-decoration: none;
+  font-size: 0.95em;
+  border: 0.2px solid rgb(0, 0, 0, 0.5);
+  width: 6rem;
+  height: 2rem;
+
+  margin-right: 1rem;
+  padding: .35rem .35rem .45rem .35rem;
+  border-radius: 4px;
+}
+
+.topnav a:hover {
+  color: white;
+  background-color: black;
+}
+
+.nav a {
+  font-family: "E_motion", sans-serif;
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  /*padding: 1em 1em;*/
+  text-decoration: none;
+  font-size: 0.95em;
+  border: 0.2px solid rgb(0, 0, 0, 0.5);
+  width: 6rem;
+  height: 2rem;
+
+  margin-right: 1rem;
+  padding: .35rem .35rem .45rem .35rem;
+  border-radius: 4px;
+}
+
+.nav a:hover {
+  background-color: black;
+  color: white;
 }
 
 .attached a {
@@ -483,30 +369,26 @@ div {
 }
 
 .language a {
-  float: left;
-  color: black;
   font-family: "E_motion", sans-serif;
-  border: 1px solid black;
-  margin-right: 1rem;
-  cursor: pointer;
-  font-size: 1rem;
-  opacity: 1;
-  padding: .35rem .35rem .45rem .35rem;
-  text-align: center;
-  outline: none;
-  text-decoration:none;
-  width: 5.8rem;
-  background-color: white;
+  float: left;
+  display: block;
   color: black;
-}
+  text-align: center;
+  /*padding: 1em 1em;*/
+  text-decoration: none;
+  font-size: 0.95em;
+  border: 0.2px solid rgb(0, 0, 0, 0.5);
+  width: 6rem;
+  height: 2rem;
 
-.attached a:hover {
-}
-
-.topnav a:hover {
+  margin-right: 1rem;
+  padding: .35rem .35rem .45rem .35rem;
+  border-radius: 4px;
 }
 
 .language a:hover {
+  background-color: black;
+  color: white;
 }
 
 .attached a.active {
@@ -567,6 +449,7 @@ div {
   width: 30px;
   height: 30px;
   background: black;
+  color: white;
   display: block;
   top: 10px;
   right: 10px;
