--- a/E_motion/assets/css/style.css
+++ b/E_motion/assets/css/style.css
@@ -29,16 +29,6 @@ div {
   font-weight: 100 900;
 }
 
-p {
-  margin: 0;
-  padding: 0;
-}
-
-h3 {
-  font-family: "E_motion", sans-serif;
-  font-size: 0.95rem;
-}
-
 :root {
   --text-SAJO: 0;
   --text-DITR: 0;
@@ -96,24 +86,19 @@ h3 {
   padding-top: 1rem;
 }
 
-.Text {
+/*.container-text {
   font-family: "E_motion", sans-serif;
-  margin: 1rem 1rem 4rem 1rem;
-
-  padding: 1.5rem;
-  text-align: center;
-  font-size: 2rem;
+  display: grid;
+  grid-template-columns: 9fr 3fr;
   background-color: white;
   color: black;
-
-  /*border-top: 0.2px solid rgb(0,0,0,0.5);*/
-  /*border-radius: 20px;*/
-  /*outline: none;*/
-}
+}*/
 
 .demo-text {
   font-family: "E_motion", sans-serif;
 
+  /*font-size: "font-size";*/
+  font-size: 10rem;
   font-SAJO: var(--text-SAJO);
   font-ANFE: var(--text-ANFE);
   font-DITR: var(--text-DITR);
@@ -152,6 +137,27 @@ h3 {
   color: black;
 
   z-index:-1;
+}
+
+.Text {
+  font-family: "E_motion", sans-serif;
+  margin-top: 0rem;
+  margin-left: 1rem;
+  padding-left: 1.5rem;
+  margin-right: 1rem;;
+  padding-right: 1.5rem;;
+  padding-bottom: 1.5rem;;
+  text-align: center;
+  font-size: 2rem;
+  background-color: white;
+  color: black;
+  text-align: center;
+  border: 0.2px solid rgb(0,0,0,0.5);
+  border-radius: 20px;
+  padding-top: 1rem;
+
+  /*border: none;*/
+  outline: none;
 }
 
 .Style {
@@ -252,7 +258,6 @@ h3 {
   appearance: none;
   width: 10px;
   height: 10px;
-  /*border: 0.2px solid rgb(0,0,0,0.5);*/
   border-radius: 100%;
   background-color: rgba(0,0,0,1);
 }
@@ -408,6 +413,12 @@ h3 {
 }
 
 .attached-right {
+  float: right;
+  background-color: white;
+  color: black;
+}
+
+.language-right {
   float: right;
   background-color: white;
   color: black;
