--- a/E_motion/assets/css/style.css
+++ b/E_motion/assets/css/style.css
@@ -118,8 +118,6 @@ h3 {
 
   background-color: white;
   color: black;
-
-  z-index:-1;
 }
 
 .about-text {
@@ -187,17 +185,6 @@ h3 {
   color: black;
 }
 
-.Thanks-text {
-  font-family: "E_motion", sans-serif;
-  /*padding-top: 2rem;*/
-  margin-left: 1rem;
-  margin-top: 2rem;
-  text-align: left;
-  font-size: 1rem;
-  background-color: white;
-  color: black;
-}
-
 .controls {
 }
 
@@ -260,6 +247,7 @@ h3 {
 }
 
 .slider {
+  font-family: "E_motion", sans-serif;
   -webkit-appearance: none;
   width: 90%;
   height: 0.2px;
@@ -377,11 +365,15 @@ h3 {
   margin-right: 1rem;
   padding: .35rem .35rem .45rem .35rem;
   border-radius: 4px;
+
+  background-color: white;
+  border: black;
 }
 
 .topnav a:hover {
   color: white;
   background-color: black;
+  border: 0.2px solid rgb(250, 250, 250, 0.5);
 }
 
 .nav a {
@@ -456,6 +448,7 @@ h3 {
 .topnav a.active {
   background-color: black;
   color: white;
+  border: 0.2px solid rgb(250, 250, 250, 0.5);
 }
 
 .language a.active {
