--- a/Sketch_variable/abc/A_slider_DV/style.css
+++ b/Sketch_variable/abc/A_slider_DV/style.css
@@ -58,6 +58,7 @@
             font-variation-settings: 'SIZE' 1;
             font-size: 8px !important;
             padding: 10px;
+            padding-left: 20px;
             text-align: center;
             float: left;
             letter-spacing: -0.6px;
@@ -74,6 +75,7 @@
             font-variation-settings: 'SIZE' 1;
             font-size: 8px !important;
             padding: 10px;
+            padding-right: 20px;
             padding-bottom:0;
             float:right;
             text-align: center;
