--- a/Sketch_variable/abc/A_slider_DV/style.css
+++ b/Sketch_variable/abc/A_slider_DV/style.css
@@ -12,10 +12,10 @@
             color: black;
         }
 
-        /*
+        
         canvas{
             display: none;
-        }*/
+        }
         
         #text {
             position: absolute;
