--- a/Optotype/css/index_style.css
+++ b/Optotype/css/index_style.css
@@ -12,10 +12,10 @@
             color: black;
         }
 
-        /*
+        
         canvas{
             display: none;
-        }*/
+        }
         
         #text {
             position: absolute;
@@ -23,11 +23,11 @@
             top: -500px;
             right: 0;
             bottom: 0; */
-            width: 80vw;
+            width: 100vw;
             height:80vh;
 
             font-family: ‘Font’;
-            text-align: center;
+            
             padding: 10% 0;
         
             color: black;
@@ -38,6 +38,56 @@
             font-kerning: normal;
             z-index: -1;
         }
+
+        #text p{
+            font-family: ‘Font’;
+            font-variation-settings: 'SIZE' 300;
+            /*letter-spacing: -1px;*/
+            font-kerning: normal;
+            text-align: center;
+
+        }
+        #divtext{
+            position: relative;
+            padding-bottom: 20px;
+        }
+
+
+        #divtext span.val {
+            font-family: ‘Font’;
+            font-variation-settings: 'SIZE' 1;
+            font-size: 8px !important;
+            padding: 10px;
+            padding-left: 20px;
+            text-align: center;
+            float: left;
+            letter-spacing: -0.6px;
+            line-height: 90%;
+            bottom: 20%;
+            position: absolute;
+            padding-bottom:0;
+
+        }
+
+
+        #text span.valright {
+            font-family: ‘Font’;
+            font-variation-settings: 'SIZE' 1;
+            font-size: 8px !important;
+            padding: 10px;
+            padding-right: 20px;
+            padding-bottom:0;
+            float:right;
+            text-align: center;
+            letter-spacing: -0.6px;
+            line-height: 90%;
+            bottom: 20%;
+            right:0;
+            position: absolute;
+
+
+        }
+
 
         .slidecontainer {
             width: 102vw;
@@ -258,32 +308,59 @@
 
         }
 
-        p .text1{
-
-            font-size: 300px;
-        }
-
-        p .text2{
+        p.text1{
 
             font-size: 200px;
+            margin:0;
         }
 
-        p .text3{
+        #text p.text2{
 
             font-size: 150px;
+            margin:0;
         }
 
-        p .text4{
+        #text p.text3{
 
             font-size: 100px;
+            margin:0;
         }
 
-        p .text5{
+        #text p.text4{
 
             font-size: 50px;
+            margin:0;
         }
 
-        p .text6{
+        #text p.text5{
+
+            font-size: 30px;
+            margin:0;
+        }
+
+        #text p.text6{
 
             font-size: 20px;
+            margin:0;
+        }
+
+        #text p.text7{
+
+            font-size: 15px;
+            margin:0;
+        }
+        #text p.text8{
+
+            font-size: 10px;
+            margin:0;
+        }
+        #text p.text9{
+
+            font-size: 8px;
+            margin:0;
+        }
+        #text p.text10{
+
+            font-size: 6px;
+            margin:0;
         }
