--- a/Optotype/css/home_style.css
+++ b/Optotype/css/home_style.css
@@ -61,6 +61,7 @@ html, body {
       bottom: 0;
       margin:0;
       padding: 0;
-      margin-left: -2vw;
+      margin-left: -1.2vw;
+      font-size: 0.6em;
 
     }
