--- a/E_motion/assets/css/style.css
+++ b/E_motion/assets/css/style.css
@@ -518,6 +518,13 @@ a .active {
   opacity: 1;
 }
 
+.topnav-right a.active {
+  background-color: white;
+  color: black;
+  border: 1px solid rgb(255,255,255,1);
+  opacity: 1;
+}
+
 .language a.active {
   background-color: white;
   color: black;
